# neofuturo-desafio-tecnico

./: .gitignore  README.md  desc.md  main.py  notes.md  pyproject.toml  tests.ipynb
dados/: exemplo_fornecedor_a.csv
dump/: groups.json
exemplos/: exemplo_fornecedor_a_modificado.csv  exemplo_fornecedor_b.csv
src/: __init__.py  main.py  state.py
src/config/: __init__.py  logging.py  prompts.py  settings.py
src/domain/: __init__.py  group.py  item.py
src/grouping/: __init__.py  worker.py
src/llm/: llm.py
src/service/: __init__.py  create_items_from_csv.py  create_items_from_pdf.py  get_suspicious_items.py  group_items.py
src/worker/: csv_worker.py  items_comparison.py
