[project]
name = "neofuturo-desafio-tecnico"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "ipykernel>=7.1.0",
    "levenshtein>=0.27.3",
    "nltk>=3.9.2",
    "openai>=2.14.0",
    "pandas>=2.3.3",
    "pypdf>=6.5.0",
    "python-multipart>=0.0.21",
    "seaborn>=0.13.2",
    "unidecode>=1.4.0",
]
